--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
+  <script src="https://js.stripe.com/v3/"></script>
+  <script>
+    const stripe   = Stripe('pk_test_51N9uAuJQOS6LL1BmtNotBHSCo9ajgKrbRGnY83X4ASF9eonqT6HqJYTFbH4PwWWaUZd7xi7S0L3phv1NMz8QBj0700lCZxkfre');
+    const elements = stripe.elements();
+    console.log("Stripe Object: ", stripe)
+    console.log("Elements Object: ", elements)
+  </script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
